--- a/2번 문제.md
+++ b/2번 문제.md
@@ -1,1 +1,6 @@
+(2) TCP 와 UDP 의 차이를 작성해주세요
 
+TCP는 연결 지향, UDP는 비연결 지향입니다.
+전자는 연결/해제 시 별도의 절차를 거쳐 연결 여부를 확정짓고 후자는 그런 과정을 거치지 않는 대신 더 빠릅니다.
+하지만 확실한 연결의 여부에 따라 데이터의 신뢰성이 차이가 납니다. 
+TCP 방식은 패킷을 주고받을 때 ACK가 오가기에 유실된 데이터에 대한 재전송을 요청할 수 있으나, UDP 방식은 그런 것이 없습니다.
